tests/ui/generic-associated-types/extended/lending_iterator.base.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/lending_iterator.rs:13:45
   |
LL |     fn from_iter<T: for<'x> LendingIterator<Item<'x> = A>>(iter: T) -> Self;
   |     ------------------------------------------------------------------------ definition of `from_iter` from trait
...
LL |     fn from_iter<I: for<'x> LendingIterator<Item<'x> = A>>(mut iter: I) -> Self {
   |                                             ^^^^^^^^^^^^ impl has extra requirement `I: 'x`

error: `Self` does not live long enough
  --> $DIR/lending_iterator.rs:34:9
   |
LL |         <B as FromLendingIterator<A>>::from_iter(self)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0276`.
